// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItemInput renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginLeft": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            },
            {
              "justifyContent": "flex-end",
              "paddingLeft": 16,
            },
          ]
        }
      >
        <TextInput
          multiline={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          style={
            [
              {
                "color": "#2E3338",
                "flex": 1,
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingHorizontal": 0,
                "paddingVertical": 12,
              },
              {
                "textAlignVertical": "top",
              },
              [
                {
                  "color": "#666666",
                  "minWidth": 160,
                  "paddingVertical": 0,
                  "textAlign": "right",
                },
                {
                  "color": "#666666",
                },
              ],
            ]
          }
          testID="testID"
          value="value"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemSwitch renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginLeft": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <AndroidSwitch
        accessibilityRole="switch"
        enabled={true}
        on={true}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      />
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginLeft": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
              "marginRight": 8,
            }
          }
          testID="testID/value"
        >
          value
        </Text>
        <svg
          fill="none"
          height={16}
          style={{}}
          testID="ForwardChevron"
          viewBox="0 0 8 16"
          width={8}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M.293.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1 0 1.414l-6 6a1 1 0 0 1-1.414-1.414L5.586 7 .293 1.707a1 1 0 0 1 0-1.414Z"
            fill="#2E3338"
            fillRule="evenodd"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly without value 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginLeft": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      />
    </View>
  </View>
</View>
`;
